--- a/template_src/index.tpl.html
+++ b/template_src/index.tpl.html
@@ -3,10 +3,10 @@
 	<head>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <meta name="description" content="<%= description %>"/>
+    <meta name="description" content="[%= description %]"/>
     <meta name="viewport" content="width=device-width"/>
-    <link rel="shortcut icon" type="image/png" href="<%= favicon %>" />
-    <title><%= name %></title>
+    <link rel="shortcut icon" type="image/png" href="[%= favicon %]" />
+    <title>[%= name %]</title>
   </head>
 	<body ng-app="app">
 
