--- a/template_src/index.tpl.html
+++ b/template_src/index.tpl.html
@@ -6,7 +6,7 @@
     <meta name="description" content="[%= description %]"/>
     <meta name="viewport" content="width=device-width"/>
     <link rel="shortcut icon" type="image/png" href="[%= favicon %]" />
-    <title>[%= name %]</title>
+    <title>[%= title %]</title>
   </head>
 	<body ng-app="app">
 
