close #11 : add colors + light change^^

--- a/template_src/index.tpl.html
+++ b/template_src/index.tpl.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" type="image/png" href="[%= favicon %]" />
     <title>[%= title %]</title>
   </head>
-	<body ng-app="app">
+	<body ng-app="app" on-off-switch>
 
     <noscript>
       <h1 class="bg-red"><%= nojs_sentence %></h1>
