close #44 : add a triangle to show the file view menu is openbale

--- a/template_src/src/headerView/HeaderView.tpl.html
+++ b/template_src/src/headerView/HeaderView.tpl.html
@@ -2,7 +2,7 @@
 	<img class="logo" src="[%= urlLogo %]">
 	<div class="title">[%= title %]</div>
 </a>
-<div class="btn" ng-click="switchAllChartsType()">Files view
+<div class="btn multiple" ng-click="switchAllChartsType()">Files view
 	<ul class="chartsTypeContainer" ng-show="showChartsType">
 		<li ng-repeat="chartType in allChartsType" ng-click="selectChartType(chartType)">{{chartType}}</li>
 	</ul>
