close #33 : size chart with screen size + redraw on window resize

--- a/template_src/src/chartView/ChartView.tpl.html
+++ b/template_src/src/chartView/ChartView.tpl.html
@@ -1,6 +1,6 @@
 <div ng-include="'src/chartView/filterView/FilterView.tpl.html'" ng-show="filterVisible"></div>
 <div class="chart">
-	<div class="svgContainer" dmp-chart></div>
+	<div dmp-chart></div>
 	<div ng-include="'src/chartView/legendView/LegendView.tpl.html'" ng-show="legendVisible"></div>
 </div>
 <div ng-include="'src/chartView/adviceView/AdviceView.tpl.html'" ng-show="advicesVisible"></div>
