--- a/template_src/src/chartView/filterView/FilterView.tpl.html
+++ b/template_src/src/chartView/filterView/FilterView.tpl.html
@@ -1,6 +1,6 @@
 <div class="filterView" ng-controller="FilterViewCtrl">
   <input type="text" class="filterInput" placeholder="Filter..." ng-model="search">
   <ul>
-    <li ng-repeat="node in nodes | filter:search" ng-mouseover="mouseOver(node)" ng-mouseout="mouseOut(node)">{{node}}</li>
+    <li ng-repeat="node in nodes | filter:search" ng-mouseover="mouseOver(node)" ng-mouseout="mouseOut(node)"  ng-click="mouseClick(node)">{{node}}</li>
   </ul>
 </div>
