better feature css (not finish)

--- a/index.html
+++ b/index.html
@@ -96,41 +96,35 @@
       <section id="showcases">
         <h1>Showcase</h1>
         <div class="showcase">
-          <img class="half" src="assets/img/showcase/skimbo/screenshot.png">
-          <div  class="half">
-            <div class="title">Skimbo</div>
-            <img src="assets/img/showcase/skimbo/logo.png">
-            <div class="description">Skimbo is an aggregator of all your social life !</div>
-            <div class="links">
-              <a href="??">Draw skimbo</a>
-              <a href="http://froggies.github.io/Skimbo/index_en.html">Blog</a>
-              <a href="http://skimbo.fr">App</a>
-              <a href="https://github.com/froggies/skimbo">Github</a>
-            </div>
+          <img class="screenshot" src="assets/img/showcase/skimbo/screenshot.png">
+          <div class="title">Skimbo</div>
+          <img class="logo" src="assets/img/showcase/skimbo/logo.png">
+          <div class="description">Skimbo is an aggregator of all your social life !</div>
+          <div class="links">
+            <a class="btn" href="??">Draw skimbo</a>
+            <a class="btn" href="http://froggies.github.io/Skimbo/index_en.html">Blog</a>
+            <a class="btn" href="http://skimbo.fr">App</a>
+            <a class="btn" href="https://github.com/froggies/skimbo">Github</a>
           </div>
         </div>
         <div class="showcase">
-          <div  class="half">
-            <div class="title">Goo</div>
-            <img src="assets/img/showcase/goo/logo.jpg">
-            <div class="description">Goo is a... !</div>
-            <div class="links">
-              <a href="??">Draw goo</a>
-              <a href="http://www.gootechnologies.com/">Goo</a>
-            </div>
+          <img class="screenshot" src="assets/img/showcase/goo/screenshot.png">
+          <div class="title">Goo</div>
+          <img class="logo" src="assets/img/showcase/goo/logo.jpg">
+          <div class="description">Goo is a... !</div>
+          <div class="links">
+            <a class="btn" href="??">Draw goo</a>
+            <a class="btn" href="http://www.gootechnologies.com/">Goo</a>
           </div>
-          <img class="half" src="assets/img/showcase/goo/screenshot.png">
         </div>
         <div class="showcase">
-          <img class="half" src="assets/img/showcase/sturvive/screenshot.png">
-          <div  class="half">
-            <div class="title">Sturvive</div>
-            <img src="assets/img/showcase/sturvive/logo.png">
-            <div class="description">Sturvive is a... !</div>
-            <div class="links">
-              <a href="??">Draw goo</a>
-              <a href="http://manland.github.io/sturvive/">Game</a>
-            </div>
+          <img class="screenshot" src="assets/img/showcase/sturvive/screenshot.png">
+          <div class="title">Sturvive</div>
+          <img class="logo" src="assets/img/showcase/sturvive/logo.png">
+          <div class="description">Sturvive is a... !</div>
+          <div class="links">
+            <a class="btn" href="??">Draw goo</a>
+            <a class="btn" href="http://manland.github.io/sturvive/">Game</a>
           </div>
         </div>
       </section>
