--- a/index.html
+++ b/index.html
@@ -19,112 +19,119 @@
       <a class="btn" href="#showcases">Showcases</a>
       
       <a class="btn" href="https://github.com/manland/draw-my-project">Github</a>
-      <a class="btn" href="https://github.com/manland/draw-my-project#release-history">Changelog</a>
-      <a class="btn" href="https://github.com/manland/draw-my-project#options">Options</a>
-      <a class="btn" href="https://github.com/manland/draw-my-project#getting-started">Install</a>
+      <a class="btn changelog" href="https://github.com/manland/draw-my-project#release-history">Changelog</a>
+      <a class="btn options" href="https://github.com/manland/draw-my-project#options">Options</a>
+      <a class="btn install" href="https://github.com/manland/draw-my-project#getting-started">Install</a>
     </header>
     <div class="main">
       
-      <section id="features" class="feature">
-        <h1>Features</h1>
-        <p class="big">With 1 grunt task transform your code into graph !</p>
-        <div class="centerImg">
-          <img src="assets/img/feature/1_ST.png">  
+      <section id="features">
+        <div class="feature f1">
+          <img src="assets/img/feature/1_ST.png">
+          <p>Thanks to 1 grunt task, you can transform your code into a graph !</p>
           <img src="assets/img/feature/1.png">
         </div>
-        <p class="big">If I modify this file, how files will be impacted ?</p>
-        <div class="centerImg">
-          <p class="min">Just hovering node to show files (green links) which may be impacted !</p>
+        <div class="feature f2">
+          <p>If I change this file, how the other files will be impacted ?</p>
           <img src="assets/img/feature/2.png">
+          <p>Just hovering a node to display files (green links) which may be impacted !</p>
         </div>
-        <p class="big">Oh yes, a legend to understand more easily.</p>
-        <div class="centerImg">
+        <div class="feature f3">
+          <p>Oh yes, a legend to understand more easily.</p>
           <img src="assets/img/feature/3.png">
-          <p class="min">Click on `Legend` button to show/hide legend !</p>
+          <p>Click on the `Legend` button to show/hide the legend !</p>
         </div>
-        <p class="big">Oh yes, a filter to easily find node.</p>
-        <div class="centerImg">
+        <div class="feature f4">
+          <p>Oh yes, a filter to easily find a node.</p>
           <img src="assets/img/feature/4.png">
-          <p class="min">Click on `Filter` button to show/hide... Filter ! Amazing not ?</p>
+          <p>Click on the `Filter` button to show/hide... the filter ! Amazing isn't it ?</p>
         </div>
-        <p class="big">Last but not least : Advices !</p>
-        <div class="centerImg">
-          <p class="min">Click on `Advices` button to show/hide... Ok you know... ! Available <a href="https://github.com/manland/draw-my-project#optionsadvices">advices</a>.</p>
+        <div class="feature f5">
+          <p>The last but not the least : Advices !</p>
           <img src="assets/img/feature/5.png">
+          <p>Click on the `Advices` button to show/hide... Ok you know... ! Available <a href="https://github.com/manland/draw-my-project#optionsadvices">advices</a>.</p>
         </div>
-        <p class="big">Why not other kinds of graph ?</p>
-        <div class="centerImg">
+        <div class="feature f6">
+          <p>Why don't you look at the other kinds of graphs ?</p>
           <img src="assets/img/feature/6.png">
-          <p class="min">Click on `Files view` button to change graph type.</p>
-        </div>
-        <div class="centerImg">
+          <p>Click on the `Files view` button to change the graph type.</p>
+          <p>Look for the biggest file by type.</p>
           <img src="assets/img/feature/7.png">
-          <p class="min">Size chart.</p>
-        </div>
-        <div class="centerImg">
+          <p>Size chart.</p>
+          <p>Or directly by file.</p>
           <img src="assets/img/feature/8.png">
-          <p class="min">Size chart by type.</p>
+          <p>Size chart by type.</p>
         </div>
-        <p class="big">Oh yes all charts can select node, of course !</p>
-        <div class="centerImg">
+        <div class="feature f7">
           <img src="assets/img/feature/9.png">
+          <p>Oh yes, of course, all graphs have the same features no matter what type they are !</p>
         </div>
-        <p class="big">And more...</p>
-        <div class="centerImg">
-          <div class="min">
-            <p>Works with :</p>
-            <ul>
-              <li>AngularJs</li>
-              <li>RequireJs</li>
-              <li>NodeJs (in development)</li>
-            </ul>
-          </div>
-          <div class="min">
-            <p>Parametrable :</p>
-            <ul>
-              <li>Your project's logo</li>
-              <li>Your project's name</li>
-              <li>Your advices</li>
-            </ul>
+        <div class="feature f8">
+          <p>And more...</p>
+          <div>
+            <div class="list">
+              <p>Works with :</p>
+              <ul>
+                <li>AngularJs</li>
+                <li>RequireJs</li>
+                <li>NodeJs (in development)</li>
+              </ul>
+            </div>
+            <div class="list">
+              <p>Customizable :</p>
+              <ul>
+                <li>Your project's logo</li>
+                <li>Your project's name</li>
+                <li>Your advices</li>
+              </ul>
+            </div>
           </div>
         </div>
-        <div class="centerImg">
+        <div class="feature f9">
+          <p>Funny ! Turn off the light !</p>
           <img src="assets/img/feature/10.png">
         </div>
       </section>
 
-      <section id="showcases">
-        <h1>Showcase</h1>
+      <section id="showcases" class="showcases">
+        <div>
+          <p>Showcases</p>
+        </div>
         <div class="showcase">
           <img class="screenshot" src="assets/img/showcase/skimbo/screenshot.png">
-          <div class="title">Skimbo</div>
-          <img class="logo" src="assets/img/showcase/skimbo/logo.png">
-          <div class="description">Skimbo is an aggregator of all your social life !</div>
-          <div class="links">
-            <a class="btn" href="??">Draw skimbo</a>
-            <a class="btn" href="http://froggies.github.io/Skimbo/index_en.html">Blog</a>
-            <a class="btn" href="http://skimbo.fr">App</a>
-            <a class="btn" href="https://github.com/froggies/skimbo">Github</a>
+          <div class="showcaseDetails">
+            <div class="title">Skimbo</div>
+            <img class="logo" src="assets/img/showcase/skimbo/logo.png">
+            <div class="description">Skimbo is an aggregator of all your social life !</div>
+            <div class="links">
+              <a class="btn" href="showcases/skimbo/index.html">Draw skimbo</a>
+              <a class="btn" href="http://froggies.github.io/Skimbo/index_en.html">Blog</a>
+              <a class="btn" href="http://skimbo.fr">App</a>
+            </div>
           </div>
         </div>
         <div class="showcase">
           <img class="screenshot" src="assets/img/showcase/goo/screenshot.png">
-          <div class="title">Goo</div>
-          <img class="logo" src="assets/img/showcase/goo/logo.jpg">
-          <div class="description">Goo is a... !</div>
-          <div class="links">
-            <a class="btn" href="??">Draw goo</a>
-            <a class="btn" href="http://www.gootechnologies.com/">Goo</a>
+          <div class="showcaseDetails">
+            <div class="title">Goo</div>
+            <img class="logo" src="assets/img/showcase/goo/logo.jpg">
+            <div class="description">Goo is a... !</div>
+            <div class="links">
+              <a class="btn" href="showcases/goo/index.html">Draw goo</a>
+              <a class="btn" href="http://www.gootechnologies.com/">Goo</a>
+            </div>
           </div>
         </div>
         <div class="showcase">
           <img class="screenshot" src="assets/img/showcase/sturvive/screenshot.png">
-          <div class="title">Sturvive</div>
-          <img class="logo" src="assets/img/showcase/sturvive/logo.png">
-          <div class="description">Sturvive is a... !</div>
-          <div class="links">
-            <a class="btn" href="??">Draw goo</a>
-            <a class="btn" href="http://manland.github.io/sturvive/">Game</a>
+          <div class="showcaseDetails">
+            <div class="title">Sturvive</div>
+            <img class="logo" src="assets/img/showcase/sturvive/logo.png">
+            <div class="description">Sturvive is a... !</div>
+            <div class="links">
+              <a class="btn" href="showcases/sturvive/index.html">Draw goo</a>
+              <a class="btn" href="http://manland.github.io/sturvive/">Game</a>
+            </div>
           </div>
         </div>
       </section>
