add angular-app tests + fix bugs with constant, value and provider + close #41 : all node hasn't type (only found in imports) is set to internal (normally it's only resolved variables)

--- a/template_src/src/chartView/legendView/LegendView.tpl.html
+++ b/template_src/src/chartView/legendView/LegendView.tpl.html
@@ -4,9 +4,11 @@
   <div class="link--source">Depends on</div>
   <div class="angularjsLegend" ng-show="isAngularjsType">
     <div class="angular">AngularJs class</div>
+    <div class="module">Module</div>
     <div class="directive">Directive</div>
     <div class="controller">Controller</div>
     <div class="factory">Service</div>
     <div class="filter">Filter</div>
+    <div class="node">Internal</div>
   </div>
 </div>
