close #30 : save background color into localStorage + better architecture for localStorage

--- a/template_src/src/headerView/HeaderView.tpl.html
+++ b/template_src/src/headerView/HeaderView.tpl.html
@@ -10,10 +10,4 @@
 <div class="btn btn-select-{{legendVisible}}" ng-click="switchLegend()">Legend</div>
 <div class="btn btn-select-{{filterVisible}}" ng-click="switchFilter()">Filter</div>
 <div class="btn btn-select-{{advicesVisible}}" ng-click="switchAdvices()">Advices</div>
-<div class="onoffswitch" ng-click="switchBodyBackground()">
-    <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch" checked="">
-    <label class="onoffswitch-label" for="myonoffswitch">
-        <div class="onoffswitch-inner"></div>
-        <div class="onoffswitch-switch"></div>
-    </label>
-</div>
+<div class="onoffswitch" on-off-switch="" ng-click="switchBodyBackground()"></div>
