close #22 : give focus to textInput when open filter view

--- a/template_src/src/chartView/filterView/FilterView.tpl.html
+++ b/template_src/src/chartView/filterView/FilterView.tpl.html
@@ -1,5 +1,5 @@
 <div class="filterView" ng-controller="FilterViewCtrl">
-  <input type="text" class="filterInput" placeholder="Filter..." ng-model="search">
+  <input type="text" class="filterInput" placeholder="Filter..." ng-model="search" focus="">
   <ul>
     <li ng-repeat="node in nodes | filter:search" ng-mouseover="mouseOver(node)" ng-mouseout="mouseOut(node)"  ng-click="mouseClick(node)">{{node}}</li>
   </ul>
