--- a/template_src/src/headerView/HeaderView.tpl.html
+++ b/template_src/src/headerView/HeaderView.tpl.html
@@ -9,5 +9,5 @@
 </div>
 <div class="btn btn-select-{{legendVisible}}" ng-click="switchLegend()">Legend</div>
 <div class="btn btn-select-{{filterVisible}}" ng-click="switchFilter()">Filter</div>
-<div class="btn btn-select-{{advicesVisible}}" ng-click="switchAdvices()">Advices</div>
+<div class="btn btn-select-{{advicesVisible}}" ng-click="switchAdvices()" ng-show="advicesAvailable">Advices</div>
 <div class="onoffswitch" on-off-switch="" ng-click="switchBodyBackground()"></div>
