add java type and an advice link

--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
               <ul>
                 <li>AngularJs</li>
                 <li>RequireJs</li>
-                <li>NodeJs (in development)</li>
+                <li>NodeJs (in test)</li>
+                <li>Java (in development)</li>
               </ul>
             </div>
             <div class="list">
@@ -82,7 +83,7 @@
               <ul>
                 <li>Your project's logo</li>
                 <li>Your project's name</li>
-                <li>Your advices</li>
+                <li>Your <a href="https://github.com/manland/draw-my-project#optionsadvices">advices</a></li>
               </ul>
             </div>
           </div>
