add source view and zoom/drag feature

--- a/index.html
+++ b/index.html
@@ -52,6 +52,16 @@
           <p>Click on the `Advices` button to show/hide... Ok you know... ! Available <a href="https://github.com/manland/draw-my-project#optionsadvices">advices</a>.</p>
         </div>
         <div class="feature f6">
+          <p>Why not see directly sources ?</p>
+          <img src="assets/img/feature/11.png">
+          <p>Click on a node to see its sources.</p>
+        </div>
+        <div class="feature f7">
+          <p>Zoom/drag</p>
+          <img src="assets/img/feature/12.png">
+          <p>Your sources, your project, your point of view !</p>
+        </div>
+        <div class="feature f8">
           <p>Why don't you look at the other kinds of graphs ?</p>
           <img src="assets/img/feature/6.png">
           <p>Click on the `Files view` button to change the graph type.</p>
@@ -62,11 +72,11 @@
           <img src="assets/img/feature/8.png">
           <p>Size chart by type.</p>
         </div>
-        <div class="feature f7">
+        <div class="feature f9">
           <img src="assets/img/feature/9.png">
           <p>Oh yes, of course, all graphs have the same features no matter what type they are !</p>
         </div>
-        <div class="feature f8">
+        <div class="feature f10">
           <p>And more...</p>
           <div>
             <div class="list">
@@ -88,7 +98,7 @@
             </div>
           </div>
         </div>
-        <div class="feature f9">
+        <div class="feature f11">
           <p>Funny ! Turn off the light !</p>
           <img src="assets/img/feature/10.png">
         </div>
