add missing showcase description

--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
           <div class="showcaseDetails">
             <div class="title">Goo</div>
             <img class="logo" src="assets/img/showcase/goo/logo.jpg">
-            <div class="description">Goo is a... !</div>
+            <div class="description">Goo is a powerfull js lib
+for interactive 3D graphics !</div>
             <div class="links">
               <a class="btn" href="showcases/goo/index.html">Draw goo</a>
               <a class="btn" href="http://www.gootechnologies.com/">Goo</a>
@@ -138,7 +139,7 @@
           <div class="showcaseDetails">
             <div class="title">Sturvive</div>
             <img class="logo" src="assets/img/showcase/sturvive/logo.png">
-            <div class="description">Sturvive is a... !</div>
+            <div class="description">Sturvive is a 3D starship survivor game, build with goo for a mozilla contest !</div>
             <div class="links">
               <a class="btn" href="showcases/sturvive/index.html">Draw goo</a>
               <a class="btn" href="http://manland.github.io/sturvive/">Game</a>
