add angularApp showcase

--- a/index.html
+++ b/index.html
@@ -146,6 +146,18 @@ for interactive 3D graphics !</div>
             </div>
           </div>
         </div>
+        <div class="showcase">
+          <img class="screenshot" src="assets/img/showcase/angularApp/screenshot.png">
+          <div class="showcaseDetails">
+            <div class="title">AngularApp</div>
+            <img class="logo" src="assets/img/showcase/angularApp/logo.png">
+            <div class="description">AngularApp is a simple reference application for AngularJS !</div>
+            <div class="links">
+              <a class="btn" href="showcases/angularApp/index.html">Draw AngularApp</a>
+              <a class="btn" href="https://github.com/angular-app/angular-app">Github</a>
+            </div>
+          </div>
+        </div>
       </section>
       
     </div>
